--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -7,7 +7,7 @@
     "bonfhir-codegen": "dist/index.js"
   },
   "scripts": {
-    "build": "yarn clean && swc ./src -d dist",
+    "build": "yarn clean && swc ./src -d dist -q -s inline",
     "check-all": "prettier --check . && eslint . && tsc --noEmit",
     "clean": "rimraf dist/",
     "dev": "ts-node --esm --swc --transpileOnly --experimental-specifier-resolution=node src/index.ts"
@@ -19,16 +19,25 @@
     "@bonfhir/typescript-config": "*",
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.24",
+    "@types/fhir": "^0.0.35",
+    "@types/handlebars-helpers": "^0",
+    "@types/listr": "^0",
+    "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
     "@types/yargs": "^17",
     "eslint": "^8.30.0",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   },
   "prettier": "@bonfhir/prettier-config",
   "dependencies": {
     "chalk": "^5.2.0",
+    "fast-glob": "^3.2.12",
+    "handlebars": "^4.7.7",
+    "handlebars-helpers": "^0.10.0",
+    "listr": "^0.14.3",
     "yargs": "^17.6.2"
   }
 }
