--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -7,7 +7,7 @@
     "bonfhir-codegen": "dist/index.js"
   },
   "scripts": {
-    "build": "yarn clean && swc ./src -d dist -q -s inline",
+    "build": "yarn clean && swc ./src -d dist -q -s true",
     "check-all": "prettier --check . && eslint . && tsc --noEmit",
     "clean": "rimraf dist/",
     "dev": "ts-node --esm --swc --transpileOnly --experimental-specifier-resolution=node src/index.ts"
@@ -35,6 +35,7 @@
   "dependencies": {
     "chalk": "^5.2.0",
     "fast-glob": "^3.2.12",
+    "fhirpath": "^3.3.0",
     "handlebars": "^4.7.7",
     "handlebars-helpers": "^0.10.0",
     "listr": "^0.14.3",
