--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -19,8 +19,10 @@
     "@bonfhir/typescript-config": "*",
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.24",
+    "@types/fhir": "^0.0.35",
     "@types/handlebars-helpers": "^0",
     "@types/listr": "^0",
+    "@types/lodash": "^4",
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
     "@types/yargs": "^17",
@@ -38,6 +40,8 @@
     "handlebars": "^4.7.7",
     "handlebars-helpers": "^0.10.0",
     "listr": "^0.14.3",
+    "lodash": "^4.17.21",
+    "to-words": "^3.3.2",
     "yargs": "^17.6.2"
   }
 }
