--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -7,7 +7,7 @@
     "bonfhir-codegen": "dist/index.js"
   },
   "scripts": {
-    "build": "yarn clean && swc ./src -d dist -q -s true",
+    "build": "yarn clean && tsc",
     "check-all": "prettier --check . && eslint . && tsc --noEmit",
     "clean": "rimraf dist/",
     "dev": "ts-node --esm --swc --transpileOnly --experimental-specifier-resolution=node src/index.ts"
