--- a/packages/fakes/package.json
+++ b/packages/fakes/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "@bonfhir/core",
+  "name": "@bonfhir/fakes",
   "version": "0.0.0",
-  "description": "Core package for Bonfhir.",
+  "description": "Fakers for Bonfhir.",
   "type": "module",
   "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
   "packageManager": "yarn@3.3.1",
   "scripts": {
     "build": "yarn clean && tsc",
     "check-all": "prettier --check . '!**/*.hbs' && eslint . && tsc --noEmit",
     "clean": "rimraf dist/",
-    "codegen": "yarn workspace @bonfhir/codegen run dev run -d '/workspace/fhir/**/*.json' --t '/workspace/packages/core/**/*.hbs' -p 'prettier --write %files%'"
+    "codegen": "yarn workspace @bonfhir/codegen run dev run -d '/workspace/fhir/**/*.json' --t '/workspace/packages/fakes/**/*.hbs' -p 'prettier --write %files%'"
+  },
+  "dependencies": {
+    "@bonfhir/core": "*",
+    "@faker-js/faker": "^7.6.0"
   },
   "devDependencies": {
     "@bonfhir/codegen": "*",
     "@bonfhir/eslint-config": "*",
     "@bonfhir/prettier-config": "*",
     "@bonfhir/typescript-config": "*",
+    "@swc/cli": "^0.1.59",
+    "@swc/core": "^1.3.24",
     "@types/fhir": "^0.0.35",
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
@@ -25,8 +30,5 @@
     "rimraf": "^3.0.2",
     "typescript": "^4.9.4"
   },
-  "prettier": "@bonfhir/prettier-config",
-  "dependencies": {
-    "html-entities": "^2.3.3"
-  }
+  "prettier": "@bonfhir/prettier-config"
 }
