--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -1,38 +1,47 @@
 {
   "name": "@bonfhir/codegen",
-  "version": "0.0.0",
   "description": "Code generator based on FHIR definitions",
+  "version": "0.0.0",
+  "repository": "https://github.com/bonfhir/bonfhir.git",
+  "license": "APACHE-2.0",
   "type": "module",
   "bin": {
     "bonfhir-codegen": "dist/index.js"
   },
   "scripts": {
-    "build": "yarn clean && tsc",
-    "check-all": "prettier --check . && eslint . && tsc --noEmit",
+    "build": "yarn clean && tsc --project tsconfig.build.json",
+    "check": "prettier --loglevel silent --check ./src && eslint ./src && tsc --noEmit",
     "clean": "rimraf dist/",
-    "dev": "ts-node --esm --swc --transpileOnly --experimental-specifier-resolution=node src/index.ts"
+    "dev": "ts-node --esm --swc --transpileOnly --experimental-specifier-resolution=node src/index.ts",
+    "test": "jest"
   },
   "packageManager": "yarn@3.3.1",
+  "files": [
+    "dist/**/*",
+    "!**/*.tsbuildinfo"
+  ],
   "devDependencies": {
     "@bonfhir/eslint-config": "*",
     "@bonfhir/prettier-config": "*",
     "@bonfhir/typescript-config": "*",
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.24",
+    "@swc/jest": "^0.2.24",
     "@types/fhir": "^0.0.35",
     "@types/handlebars-helpers": "^0",
+    "@types/jest": "^29.2.4",
     "@types/listr": "^0",
     "@types/lodash": "^4",
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
     "@types/yargs": "^17",
     "eslint": "^8.30.0",
+    "jest": "^29.3.1",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
-  "prettier": "@bonfhir/prettier-config",
   "dependencies": {
     "chalk": "^5.2.0",
     "fast-glob": "^3.2.12",
@@ -43,5 +52,6 @@
     "lodash": "^4.17.21",
     "to-words": "^3.3.2",
     "yargs": "^17.6.2"
-  }
+  },
+  "prettier": "@bonfhir/prettier-config"
 }
