--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,19 +7,20 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "andrejunges.Handlebars",
-        "dbaeumer.vscode-eslint",
-        "eamodio.gitlens",
-        "EditorConfig.EditorConfig",
-        "esbenp.prettier-vscode",
-        "github.vscode-pull-request-github",
-        "ms-azuretools.vscode-docker",
-        "nrwl.angular-console",
-        "streetsidesoftware.code-spell-checker",
-        "usernamehw.errorlens",
-        "vivaxy.vscode-conventional-commits",
-        "wmaurer.change-case"
-      ],
+		"andrejunges.Handlebars",
+		"dbaeumer.vscode-eslint",
+		"eamodio.gitlens",
+		"EditorConfig.EditorConfig",
+		"esbenp.prettier-vscode",
+		"github.vscode-pull-request-github",
+		"ms-azuretools.vscode-docker",
+		"nrwl.angular-console",
+		"streetsidesoftware.code-spell-checker",
+		"usernamehw.errorlens",
+		"vivaxy.vscode-conventional-commits",
+		"wmaurer.change-case",
+		"cschleiden.vscode-github-actions"
+	],
       "settings": {
         "[javascript]": {
           "editor.defaultFormatter": "esbenp.prettier-vscode",
