--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # Required to support lerna --since command
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -24,6 +24,9 @@ jobs:
 
       - name: Check
         run: yarn lerna run check --since=origin/main
+
+      - name: Build
+        run: yarn lerna run build --since=origin/main
 
       - name: Test
         run: yarn lerna run test --since=origin/main -- --coverage --passWithNoTests
