--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,7 +19,7 @@ jobs:
           cache: yarn
 
       - name: Install packages
-        run: yarn install
+        run: yarn install --immutable
 
       - name: Check
         run: yarn lerna run check
