--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -20,7 +20,7 @@ jobs:
           cache: yarn
 
       - name: Install packages
-        run: yarn install
+        run: yarn install --immutable
 
       - name: Check
         run: yarn lerna run check --since=origin/main
