feat: :construction: add fakes and terminology packages
This is still WIP for both.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -55,7 +55,12 @@
             "source.fixAll.eslint": true
           }
         },
-        "conventionalCommits.scopes": ["codegen", "core"],
+        "conventionalCommits.scopes": [
+          "codegen",
+          "core",
+          "fakes",
+          "terminology"
+        ],
         "conventionalCommits.showEditor": true,
         "cSpell.words": [
           "bonfhir",
