docs(docs): :memo: add docs package

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -58,6 +58,7 @@
         "conventionalCommits.scopes": [
           "codegen",
           "core",
+          "docs",
           "fakes",
           "terminology"
         ],
