feat(core): :sparkles: add fhirSearch builder

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@bonfhir/typescript-config/tsconfig.json",
   "include": ["**/*.ts"],
+  "exclude": ["**/dist"],
   "compilerOptions": {
     "rootDir": "."
   }
