test(core): :white_check_mark: add missing tests for merge and narrative

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -67,6 +67,8 @@
           "bonfhir",
           "Bonfhir",
           "codegen",
+          "codeable",
+          "Codeable",
           "devcontainer",
           "fhir",
           "FHIR",
