--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -110,6 +110,13 @@
     }
   },
 
+  "portsAttributes": {
+    "4000": {
+      "label": "Docs",
+      "onAutoForward": "openBrowserOnce"
+    }
+  },
+
   "postStartCommand": "find . -name \"node_modules\" -exec sh -c 'sudo chown -R $USER:$GROUP \"$0\"' '{}' \\; && yarn install --silent",
 
   "remoteUser": "node"
