chore(docs): :hammer: update port for doc serve to match dev (4000)

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,7 +12,7 @@
     "deploy": "docusaurus deploy",
     "dev": "docusaurus start --port 4000",
     "docusaurus": "docusaurus",
-    "serve": "docusaurus serve --dir dist",
+    "serve": "docusaurus serve --dir dist --port 4000",
     "swizzle": "docusaurus swizzle",
     "write-heading-ids": "docusaurus write-heading-ids",
     "write-translations": "docusaurus write-translations"
