--- a/packages/fakes/package.json
+++ b/packages/fakes/package.json
@@ -12,7 +12,7 @@
     "build": "yarn clean && tsc --project tsconfig.build.json",
     "check": "prettier --check ./**/*.ts && eslint ./**/*.ts && tsc --noEmit",
     "clean": "rimraf dist/",
-    "codegen": "yarn workspace @bonfhir/codegen run dev run -d \"${PWD}/../../fhir/r4b/**/*.json\" -t \"${PWD}/r4b/**/*.hbs\" -p 'prettier --write %files%'",
+    "codegen": "yarn workspace @bonfhir/codegen run dev run -d \"${PWD}/../../fhir/r4b/**/*.json\" -t \"${PWD}/r4b/**/*.hbs\" --helpers \"${PWD}/template-helpers.js\" -p 'prettier --write %files%'",
     "test": "jest"
   },
   "packageManager": "yarn@3.3.1",
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "@bonfhir/core": "*",
-    "@faker-js/faker": "^7.6.0"
+    "@ngneat/falso": "^6.3.2"
   },
   "prettier": "@bonfhir/prettier-config"
 }
