feat(medplum): :tada: add medplum package with restful client adapter

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -60,6 +60,7 @@
           "core",
           "docs",
           "fakes",
+          "medplum",
           "terminology"
         ],
         "conventionalCommits.showEditor": true,
