feat(core): :sparkles: add bundle navigator

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -75,7 +75,8 @@
           "FHIR",
           "fhirpath",
           "Listr",
-          "listr"
+          "listr",
+          "Referenceable"
         ],
         "errorLens.enabledDiagnosticLevels": ["error", "warning"],
         "eslint.workingDirectories": ["packages/*"],
