--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,6 +37,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "fhirpath": "^3.3.1",
     "html-entities": "^2.3.3"
   },
   "prettier": "@bonfhir/prettier-config"
