--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -59,9 +59,9 @@
           "codegen",
           "core",
           "docs",
-          "fakes",
           "medplum",
-          "terminology"
+          "terminology",
+          "test-support"
         ],
         "conventionalCommits.showEditor": true,
         "cSpell.words": [
