--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,6 +32,7 @@
     "@types/rimraf": "^3",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
+    "jest-mock-extended": "^3.0.1",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.9.4"
