--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -27,6 +27,7 @@
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
+    "@types/fhir": "^0.0.35",
     "@types/handlebars-helpers": "^0",
     "@types/jest": "^29.2.4",
     "@types/listr": "^0",
