--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/codegen",
   "description": "Code generator based on FHIR definitions",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.0",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
@@ -21,9 +21,9 @@
     "!**/*.tsbuildinfo"
   ],
   "devDependencies": {
-    "@bonfhir/eslint-config": "*",
-    "@bonfhir/prettier-config": "*",
-    "@bonfhir/typescript-config": "*",
+    "@bonfhir/eslint-config": "^1.0.0",
+    "@bonfhir/prettier-config": "^1.0.0",
+    "@bonfhir/typescript-config": "^1.0.0",
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
