--- a/packages/medplum/package.json
+++ b/packages/medplum/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/medplum",
   "description": "Medplum integration package for Bonfhir.",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.0",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
@@ -20,9 +20,9 @@
     "!**/*.tsbuildinfo"
   ],
   "devDependencies": {
-    "@bonfhir/eslint-config": "*",
-    "@bonfhir/prettier-config": "*",
-    "@bonfhir/typescript-config": "*",
+    "@bonfhir/eslint-config": "^1.0.0",
+    "@bonfhir/prettier-config": "^1.0.0",
+    "@bonfhir/typescript-config": "^1.0.0",
     "@medplum/core": "^1.0.5",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
@@ -35,7 +35,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@bonfhir/core": "*"
+    "@bonfhir/core": "^1.0.0-alpha.0"
   },
   "peerDependencies": {
     "@medplum/core": "*"
