--- a/packages/medplum/package.json
+++ b/packages/medplum/package.json
@@ -5,20 +5,15 @@
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
-  "exports": {
-    "./r4b/index.js": "./dist/r4b/index.js"
-  },
   "scripts": {
     "build": "yarn clean && tsc --project tsconfig.build.json",
     "check": "prettier --check ./**/*.ts && eslint ./**/*.ts && tsc --noEmit",
     "clean": "rimraf dist/",
+    "package:create": "node package.js pack",
+    "package:publish": "node package.js publish",
     "test": "jest"
   },
   "packageManager": "yarn@3.3.1",
-  "files": [
-    "dist/**/*",
-    "!**/*.tsbuildinfo"
-  ],
   "devDependencies": {
     "@bonfhir/eslint-config": "^1.0.0",
     "@bonfhir/prettier-config": "^1.0.0",
