feat(cmsdotgov): :tada: introduce `cmsdotgov` package with `NPIRegistrySyncSession`

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -55,6 +55,7 @@
           }
         },
         "conventionalCommits.scopes": [
+          "cmsdotgov",
           "codegen",
           "core",
           "docs",
