--- a/packages/cmsdotgov/package.json
+++ b/packages/cmsdotgov/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/cmsdotgov",
   "description": "CMS.gov integration package for Bonfhir.",
-  "version": "0.0.0",
+  "version": "1.0.0-alpha.1",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
