feat(nih-nlm): :tada: add nih-nlm project with RXNorm sync

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -60,6 +60,7 @@
           "core",
           "docs",
           "medplum",
+          "nih-nlm",
           "terminology",
           "test-support"
         ],
