feat(terminology): :sparkles: add `CodeSystemURIs`

--- a/packages/terminology/package.json
+++ b/packages/terminology/package.json
@@ -9,7 +9,7 @@
     "build": "yarn clean && tsc --project tsconfig.build.json",
     "check": "prettier --check ./**/*.ts && eslint ./**/*.ts && tsc --noEmit",
     "clean": "rimraf dist/",
-    "codegen": "yarn workspace @bonfhir/codegen run dev run -d \"${PWD}/../../fhir/r4b/**/*.json\" -t \"${PWD}/r4b/**/*.hbs\" -p 'prettier --write %files%'",
+    "codegen": "yarn workspace @bonfhir/codegen run dev run -d \"${PWD}/../../fhir/r4b/**/*.json\" -t \"${PWD}/r4b/**/*.ts.hbs\" --helpers \"${PWD}/template-helpers.js\" -p 'prettier --write %files%'",
     "package:create": "node package.js pack",
     "package:publish": "node package.js publish",
     "test": "jest"
