feat(charlson-comorbidity-index): :tada: add charlson-comorbidity-index package

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -55,6 +55,7 @@
           }
         },
         "conventionalCommits.scopes": [
+          "charlson-comorbidity-index",
           "cmsdotgov",
           "codegen",
           "core",
