feat(core): :sparkles: add `get` to `FhirRestfulClient` + support for better pagination

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -80,7 +80,9 @@
           "listr",
           "medplum",
           "Medplum",
-          "Referenceable"
+          "Referenceable",
+          "searchset",
+          "vread"
         ],
         "errorLens.enabledDiagnosticLevels": ["error", "warning"],
         "eslint.workingDirectories": ["packages/*"],
