--- a/packages/cmsdotgov/package.json
+++ b/packages/cmsdotgov/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@bonfhir/core": "^1.0.0-alpha.5",
     "@bonfhir/terminology": "^1.0.0-alpha.3",
+    "csv-parse": "^5.3.3",
     "lodash": "^4.17.21"
   },
   "prettier": "@bonfhir/prettier-config"
