--- a/packages/nih-nlm/package.json
+++ b/packages/nih-nlm/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@bonfhir/core": "^1.0.0-alpha.5",
     "@bonfhir/terminology": "^1.0.0-alpha.3",
+    "fhirpath": "^3.3.1",
     "lodash": "^4.17.21"
   },
   "prettier": "@bonfhir/prettier-config"
