--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,6 +25,7 @@
     "@types/fhir": "^0.0.35",
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
+    "date-fns": "^2.29.3",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
     "jest-mock-extended": "^3.0.1",
