feat(ehr-sample-app): :tada: add `ehr-sample-app` using refine
Yarn workspace must hoist locally for this to work properly.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,3 +7,8 @@ RUN su node -c "sed -i 's/plugins=(git)/plugins=(git yarn)/' ~/.zshrc"
 RUN mkdir /command_history \
  && touch /command_history/.zsh_history \
  && chown -R node /command_history
+
+# Touch node_modules mounted as volumes
+RUN mkdir -p /workspace/node_modules \
+ && mkdir -p /workspace/samples/ehr-sample-app/node_modules \
+ && chown -R node /workspace
