--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "samples/*"
   ],
   "scripts": {
     "build": "lerna run build",
