feat(refine-fhir-dataprovider): [wip] in flight fhir data provider init

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -63,6 +63,7 @@
           "ehr-sample-app",
           "medplum",
           "nih-nlm",
+          "refine-fhir-dataprovider",
           "terminology",
           "test-support"
         ],
