--- a/packages/medplum/package.json
+++ b/packages/medplum/package.json
@@ -18,7 +18,7 @@
     "@bonfhir/eslint-config": "^1.0.0",
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.0",
-    "@medplum/core": "^1.0.6",
+    "@medplum/core": "^2.0.1",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
     "@types/node": "^18.11.18",
@@ -34,7 +34,7 @@
     "@bonfhir/core": "^1.0.0-alpha.6"
   },
   "peerDependencies": {
-    "@medplum/core": "*"
+    "@medplum/core": "^2.0.0"
   },
   "prettier": "@bonfhir/prettier-config"
 }
