--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -61,6 +61,7 @@
           "core",
           "docs",
           "ehr-sample-app",
+          "fhir-query",
           "medplum",
           "nih-nlm",
           "terminology",
