refactor(ehr-sample-app): :recycle: Clean up sample app by removing refine
Standard React app + parcel for bundling

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,6 +8,15 @@ packageExtensions:
   "@lerna/version@*":
     dependencies:
       nx: ">= 14 <= 16"
+
+  "@parcel/optimizer-image@*":
+    dependencies:
+      "@parcel/core": "*"
+  
+  "@parcel/types@*":
+    dependencies:
+      "@parcel/core": "*"
+
   "@nrwl/devkit@*":
     dependencies:
       typescript: ^3 || ^4
