--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -8,13 +8,14 @@ services:
     command: sleep infinity
     environment:
       - HISTFILE=/command_history/.zsh_history
+      - SAMPLE_APP_MEDPLUM_SERVER_URL=http://localhost:8103
       - MEDPLUM_SERVER_URL=http://medplum:8103
       - MEDPLUM_CLIENT_ID=f54370de-eaf3-4d81-a17e-24860f667912
       - MEDPLUM_CLIENT_SECRET=75d8e7d06bf9283926c51d5f461295ccf0b69128e983b6ecdd5a9c07506895de
     volumes:
       - ${WORKSPACE_ROOT:-..}:/workspace:cached
       - devcontainer_node_modules:/workspace/node_modules
-      - devcontainer_sample_node_modules:/workspace/samples/ehr-sample-app/node_modules
+      - devcontainer_docs_node_modules:/workspace/packages/docs/node_modules
       - devcontainer_command_history:/command_history
 
   medplum:
@@ -49,6 +50,6 @@ services:
 
 volumes:
   devcontainer_node_modules:
-  devcontainer_sample_node_modules:
+  devcontainer_docs_node_modules:
   devcontainer_command_history:
   postgres_data:
