--- a/samples/ehr-sample-app/package.json
+++ b/samples/ehr-sample-app/package.json
@@ -1,58 +1,63 @@
 {
-  "name": "ehr-sample-app",
-  "version": "0.1.0",
+  "name": "@bonfhir/ehr-sample-app",
+  "description": "Bonfhir Sample app",
+  "version": "0.0.0",
   "private": true,
-  "installConfig": {
-    "hoistingLimits": "workspaces"
+  "repository": "https://github.com/bonfhir/bonfhir.git",
+  "license": "APACHE-2.0",
+  "type": "module",
+  "scripts": {
+    "dev": "parcel serve --open",
+    "build": "parcel build",
+    "check": "prettier --check ./**/*.tsx && eslint ./**/*.tsx && tsc --noEmit",
+    "clean": "rimraf dist/",
+    "package:create": "node package.js pack",
+    "package:publish": "node package.js publish",
+    "test": "jest"
   },
-  "dependencies": {
-    "@pankod/refine-chakra-ui": "^1.0.0",
-    "@pankod/refine-cli": "^1.2.0",
-    "@pankod/refine-core": "^3.18.0",
-    "@pankod/refine-inferencer": "^2.0.2",
-    "@pankod/refine-react-hook-form": "^3.27.1",
-    "@pankod/refine-react-router-v6": "^3.18.0",
-    "@pankod/refine-react-table": "^4.7.2",
-    "@pankod/refine-simple-rest": "^3.18.0",
-    "@tabler/icons": "^1.39.1",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.23",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.0",
-    "web-vitals": "^1.1.1"
+  "source": "src/index.html",
+  "targets": {
+    "default": {
+      "distDir": "./dist"
+    }
   },
+  "packageManager": "yarn@3.3.1",
   "devDependencies": {
-    "@types/node": "^12.20.10",
+    "@bonfhir/eslint-config": "^1.0.0",
+    "@bonfhir/prettier-config": "^1.0.0",
+    "@bonfhir/typescript-config": "^1.0.0",
+    "@swc/core": "^1.3.24",
+    "@swc/jest": "^0.2.24",
+    "@testing-library/react": "^13.4.0",
+    "@types/fhir": "^0.0.35",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "typescript": "^4.7.4"
+    "@types/rimraf": "^3",
+    "@types/styled-components": "^5",
+    "babel-plugin-styled-components": "^2.0.7",
+    "eslint": "^8.30.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-mock-extended": "^3.0.1",
+    "parcel": "^2.8.3",
+    "prettier": "^2.8.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.9.4"
   },
-  "scripts": {
-    "dev": "PORT=1234 refine start",
-    "build": "refine build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "refine": "refine"
+  "dependencies": {
+    "@bonfhir/core": "1.0.0-alpha.6",
+    "@bonfhir/fhir-query": "0.0.0",
+    "@bonfhir/medplum": "^1.0.0-alpha.7",
+    "@medplum/core": "^2.0.1",
+    "@tanstack/react-query": "^4.24.4",
+    "@tanstack/react-query-devtools": "^4.24.4",
+    "antd": "^5.1.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "react-router-dom": "^6.8.0",
+    "styled-components": "^5.3.6"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "prettier": "@bonfhir/prettier-config"
 }
