--- a/samples/ehr-sample-app/tsconfig.json
+++ b/samples/ehr-sample-app/tsconfig.json
@@ -1,32 +1,9 @@
 {
+  "extends": "@bonfhir/typescript-config/tsconfig.json",
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["**/dist"],
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": "src",
-    "paths": {
-      "*": [
-        "./*"
-      ]
-    }
-  },
-  "include": [
-    "src"
-  ]
+    "rootDir": ".",
+    "jsx": "react-jsx"
+  }
 }
