--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "private": true,
+  "installConfig": {
+    "hoistingLimits": "workspaces"
+  },
   "scripts": {
     "build": "docusaurus build --out-dir dist",
     "check": "tsc --noEmit",
