fix(fhir-query): :green_heart: fix CI build tests

--- a/packages/fhir-query/package.json
+++ b/packages/fhir-query/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "scripts": {
     "build": "yarn clean && tsc --project tsconfig.build.json",
-    "check": "prettier --check ./**/*.ts && eslint ./**/*.ts && tsc --noEmit",
+    "check": "prettier --check ./**/*.tsx && eslint ./**/*.tsx && tsc --noEmit",
     "clean": "rimraf dist/",
     "package:create": "node package.js pack",
     "package:publish": "node package.js publish",
