--- a/packages/fhir-query/tsconfig.build.json
+++ b/packages/fhir-query/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["**/*.test.ts", "**/__fixtures__"],
+  "exclude": ["**/*.test.ts", "**/*.test.tsx", "**/__fixtures__"],
   "compilerOptions": {
     "outDir": "dist"
   }
