feat(ui-components): :tada: add ui-components project

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -65,7 +65,8 @@
           "medplum",
           "nih-nlm",
           "terminology",
-          "test-support"
+          "test-support",
+          "ui-components"
         ],
         "conventionalCommits.showEditor": true,
         "cSpell.words": [
