--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -7,8 +7,10 @@
   "type": "module",
   "scripts": {
     "build": "yarn clean && tsc --project tsconfig.build.json",
+    "build:ladle": "ladle build --stories='./**/*.stories.tsx' --outDir dist-ladle/",
     "check": "prettier --check ./**/*.tsx && eslint ./**/*.tsx && tsc --noEmit",
-    "clean": "rimraf dist/",
+    "clean": "rimraf dist/ dist-ladle/",
+    "dev": "ladle serve --stories='./**/*.stories.tsx'",
     "package:create": "node package.js pack",
     "package:publish": "node package.js publish",
     "test": "jest"
@@ -19,6 +21,7 @@
     "@bonfhir/medplum": "^1.0.0-alpha.9",
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.0",
+    "@ladle/react": "^2.5.4",
     "@medplum/core": "^2.0.1",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
