--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -9,7 +9,8 @@
     "hoistingLimits": "workspaces"
   },
   "scripts": {
-    "build": "docusaurus build --out-dir dist",
+    "copy:ui-components": "copyfiles '../ui-components/dist-ladle/**/*' ./static/ui-components",
+    "build": "yarn copy:ui-components && docusaurus build --out-dir dist",
     "check": "tsc --noEmit",
     "clean": "docusaurus clear && rimraf dist/",
     "deploy": "docusaurus deploy",
@@ -21,6 +22,7 @@
     "write-translations": "docusaurus write-translations"
   },
   "dependencies": {
+    "@bonfhir/ui-components": "^0.1.0-alpha.1",
     "@docusaurus/core": "2.2.0",
     "@docusaurus/plugin-content-docs": "^2.2.0",
     "@docusaurus/preset-classic": "2.2.0",
@@ -34,7 +36,9 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.2.0",
     "@tsconfig/docusaurus": "^1.0.5",
+    "@types/copyfiles": "^2",
     "@types/rimraf": "^3",
+    "copyfiles": "^2.4.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4"
   },
