--- a/samples/ehr-sample-app/package.json
+++ b/samples/ehr-sample-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/ehr-sample-app",
   "description": "Bonfhir Sample app",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.0",
   "private": true,
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
@@ -46,10 +46,10 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@bonfhir/core": "1.0.0-alpha.6",
-    "@bonfhir/fhir-query": "0.0.0",
-    "@bonfhir/medplum": "^1.0.0-alpha.7",
-    "@bonfhir/ui-components": "0.0.0",
+    "@bonfhir/core": "^1.0.0-alpha.7",
+    "@bonfhir/fhir-query": "^0.1.0-alpha.0",
+    "@bonfhir/medplum": "^1.0.0-alpha.8",
+    "@bonfhir/ui-components": "^0.1.0-alpha.0",
     "@medplum/core": "^2.0.1",
     "@tanstack/react-query": "^4.24.4",
     "@tanstack/react-query-devtools": "^4.24.4",
