--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "decimal.js": "^10.4.3",
     "fhirpath": "^3.3.1",
     "html-entities": "^2.3.3"
   },
