--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,16 +46,17 @@
     "@types/fhir": "^0.0.35",
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
+    "date-fns": "^1.30.1",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
     "jest-mock-extended": "^3.0.1",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "rollup": "^3.14.0",
-    "tslib": "^2.5.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "fhirpath": "^3.3.1",
     "html-entities": "^2.3.3"
   },
   "prettier": "@bonfhir/prettier-config",
