--- a/packages/terminology/package.json
+++ b/packages/terminology/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "yarn clean && tsc --project tsconfig.build.json",
     "check": "prettier --check ./**/*.ts && eslint ./**/*.ts && tsc --noEmit",
+    "format": "prettier --loglevel warn --write ./**/*.ts && eslint ./**/*.ts && tsc",
     "clean": "rimraf dist/",
     "codegen": "yarn workspace @bonfhir/codegen run dev run -d \"${PWD}/../../fhir/r4b/**/*.json\" -t \"${PWD}/r4b/**/*.ts.hbs\" --helpers \"${PWD}/template-helpers.js\" -p 'prettier --write %files%'",
     "package:create": "node package.js pack",
