--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,6 +12,7 @@
     "copy:ui-components": "copyfiles '../ui-components/dist-ladle/**/*' ./static/ui-components",
     "build": "yarn copy:ui-components && docusaurus build --out-dir dist",
     "check": "tsc --noEmit",
+    "format": "prettier --loglevel warn --write ./**/*.ts && eslint ./**/*.ts && tsc",
     "clean": "docusaurus clear && rimraf dist/",
     "deploy": "docusaurus deploy",
     "dev": "docusaurus start --port 4000",
