--- a/packages/medplum/package.json
+++ b/packages/medplum/package.json
@@ -6,12 +6,27 @@
   "license": "APACHE-2.0",
   "type": "module",
   "scripts": {
-    "build": "yarn clean && tsc --project tsconfig.build.json",
+    "build": "yarn clean && npm run rollup",
     "check": "prettier --check ./**/*.ts && eslint ./**/*.ts && tsc --noEmit",
     "clean": "rimraf dist/",
+    "rollup": "rollup --config rollup.config.mjs",
     "package:create": "node package.js pack",
     "package:publish": "node package.js publish",
     "test": "jest"
+  },
+  "main": "dist/cjs/index.cjs",
+  "module": "dist/esm/index.mjs",
+  "exports": {
+    ".": {
+      "types": "./dist/esm/index.d.ts",
+      "require": "./dist/cjs/index.cjs",
+      "import": "./dist/esm/index.mjs"
+    },
+    "./r4b": {
+      "types": "./dist/esm/r4b/index.d.ts",
+      "require": "./dist/cjs/r4b/index.cjs",
+      "import": "./dist/esm/r4b/index.mjs"
+    }
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
@@ -19,6 +34,12 @@
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.0",
     "@medplum/core": "^2.0.1",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
     "@types/node": "^18.11.18",
@@ -28,6 +49,7 @@
     "jest": "^29.3.1",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
+    "rollup": "^3.14.0",
     "typescript": "^4.9.4"
   },
   "dependencies": {
