--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,14 +21,20 @@
     ".": {
       "types": "./dist/esm/index.d.ts",
       "require": "./dist/cjs/index.cjs",
-      "import": "./dist/esm/index.mjs"
+      "import": "./dist/esm/index.mjs",
+      "default": "./dist/esm/index.mjs"
     },
     "./r4b": {
       "types": "./dist/esm/r4b/index.d.ts",
       "require": "./dist/cjs/r4b/index.cjs",
-      "import": "./dist/esm/r4b/index.mjs"
+      "import": "./dist/esm/r4b/index.mjs",
+      "default": "./dist/esm/r4b/index.mjs"
     }
   },
+  "types": "./dist/esm/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
     "@bonfhir/codegen": "^1.0.0-alpha.2",
@@ -53,6 +59,8 @@
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "rollup": "^3.14.0",
+    "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.23",
     "typescript": "^4.9.4"
   },
   "dependencies": {
