chore(fhir-query): :construction_worker: update package to bundle both ESM and CJS

--- a/packages/fhir-query/tsconfig.build.json
+++ b/packages/fhir-query/tsconfig.build.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "exclude": ["**/*.test.ts", "**/*.test.tsx", "**/__fixtures__"],
   "compilerOptions": {
+    "incremental": false,
     "outDir": "dist"
   }
 }
