feat(antd): :tada: add `@bonfhir/antd` project

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -55,6 +55,7 @@
           }
         },
         "conventionalCommits.scopes": [
+          "antd",
           "charlson-comorbidity-index",
           "cmsdotgov",
           "codegen",
