--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/core",
   "description": "Core package for Bonfhir.",
-  "version": "1.0.0-alpha.8",
+  "version": "1.0.0-alpha.9",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
@@ -17,10 +17,10 @@
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
-    "@bonfhir/codegen": "^1.0.0-alpha.2",
-    "@bonfhir/eslint-config": "^1.0.0",
+    "@bonfhir/codegen": "^1.0.0-alpha.3",
+    "@bonfhir/eslint-config": "^1.1.0-alpha.0",
     "@bonfhir/prettier-config": "^1.0.0",
-    "@bonfhir/typescript-config": "^1.0.0",
+    "@bonfhir/typescript-config": "^1.0.1-alpha.0",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
     "@types/marked": "^4",
