--- a/packages/medplum/package.json
+++ b/packages/medplum/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/medplum",
   "description": "Medplum integration package for Bonfhir.",
-  "version": "1.0.0-alpha.9",
+  "version": "1.0.0-alpha.10",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
@@ -16,9 +16,9 @@
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
-    "@bonfhir/eslint-config": "^1.0.0",
+    "@bonfhir/eslint-config": "^1.1.0-alpha.0",
     "@bonfhir/prettier-config": "^1.0.0",
-    "@bonfhir/typescript-config": "^1.0.0",
+    "@bonfhir/typescript-config": "^1.0.1-alpha.0",
     "@medplum/core": "^2.0.3",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
@@ -33,7 +33,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@bonfhir/core": "^1.0.0-alpha.8"
+    "@bonfhir/core": "^1.0.0-alpha.9"
   },
   "peerDependencies": {
     "@medplum/core": "^2.0.0"
