--- a/packages/nih-nlm/package.json
+++ b/packages/nih-nlm/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/nih-nlm",
   "description": "NIH National Library of Medicine integration package for Bonfhir.",
-  "version": "1.0.0-alpha.11",
+  "version": "1.0.0-alpha.12",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
@@ -16,10 +16,10 @@
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
-    "@bonfhir/eslint-config": "^1.0.0",
-    "@bonfhir/medplum": "^1.0.0-alpha.9",
+    "@bonfhir/eslint-config": "^1.1.0-alpha.0",
+    "@bonfhir/medplum": "^1.0.0-alpha.10",
     "@bonfhir/prettier-config": "^1.0.0",
-    "@bonfhir/typescript-config": "^1.0.0",
+    "@bonfhir/typescript-config": "^1.0.1-alpha.0",
     "@medplum/core": "^2.0.3",
     "@swc/core": "^1.3.24",
     "@swc/jest": "^0.2.24",
@@ -36,8 +36,8 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@bonfhir/core": "^1.0.0-alpha.8",
-    "@bonfhir/terminology": "^1.0.0-alpha.3",
+    "@bonfhir/core": "^1.0.0-alpha.9",
+    "@bonfhir/terminology": "^1.0.0-alpha.4",
     "lodash": "^4.17.21"
   },
   "prettier": "@bonfhir/prettier-config"
