chore(ui-components): :heavy_plus_sign: add @tanstak/react-query as a peer dependency
#126

--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -51,6 +51,7 @@
   },
   "prettier": "@bonfhir/prettier-config",
   "peerDependencies": {
+    "@tanstack/react-query": "^4.0.0",
     "react": "*",
     "react-dom": "*"
   }
