feat(subscriptions): :tada: add `@bonfhir/subscription` project
Fix #153

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -65,6 +65,7 @@
           "fhir-query",
           "medplum",
           "nih-nlm",
+          "subscriptions",
           "terminology",
           "test-support",
           "ui-components"
