--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,7 +30,7 @@ jobs:
         run: yarn lerna run build
 
       - name: Test
-        run: yarn lerna run test -- --coverage --passWithNoTests
+        run: yarn lerna run test -- --coverage
 
       - name: Upload code coverage
         uses: codecov/codecov-action@v3
