--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -29,7 +29,7 @@ jobs:
         run: yarn lerna run build --since=origin/main
 
       - name: Test
-        run: yarn lerna run test --since=origin/main -- --coverage --passWithNoTests
+        run: yarn lerna run test --since=origin/main -- --coverage
 
       - name: Upload code coverage
         uses: codecov/codecov-action@v3
