--- a/packages/antd/package.json
+++ b/packages/antd/package.json
@@ -11,8 +11,7 @@
     "clean": "rimraf dist/",
     "format": "prettier --loglevel warn --write ./**/*.tsx && eslint --fix ./**/*.tsx",
     "package:create": "yarn build && node package.js pack",
-    "package:publish": "yarn build && node package.js publish",
-    "test": "jest"
+    "package:publish": "yarn build && node package.js publish"
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
@@ -20,8 +19,6 @@
     "@bonfhir/medplum": "^1.0.0-alpha.14",
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.1-alpha.0",
-    "@swc/core": "^1.3.24",
-    "@swc/jest": "^0.2.24",
     "@testing-library/react": "^13.4.0",
     "@types/fhir": "^0.0.35",
     "@types/node": "^18.11.18",
