--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -25,7 +25,6 @@
     "@bonfhir/typescript-config": "^1.0.1-alpha.0",
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.24",
-    "@swc/jest": "^0.2.24",
     "@types/fhir": "^0.0.35",
     "@types/handlebars-helpers": "^0",
     "@types/jest": "^29.2.4",
@@ -34,6 +33,8 @@
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
     "@types/yargs": "^17",
+    "esbuild": "^0.17.12",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
     "prettier": "^2.8.1",
