--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,11 +21,11 @@
     "@bonfhir/eslint-config": "^1.1.0-alpha.0",
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.1-alpha.0",
-    "@swc/core": "^1.3.24",
-    "@swc/jest": "^0.2.24",
     "@types/marked": "^4",
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
+    "esbuild": "^0.17.12",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^8.30.0",
     "jest": "^29.3.1",
     "jest-mock-extended": "^3.0.1",
