--- a/packages/fhir-query/package.json
+++ b/packages/fhir-query/package.json
@@ -21,8 +21,6 @@
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.1-alpha.0",
     "@medplum/core": "^2.0.3",
-    "@swc/core": "^1.3.24",
-    "@swc/jest": "^0.2.24",
     "@tanstack/react-query": "^4.24.4",
     "@testing-library/react": "^13.4.0",
     "@types/fhir": "^0.0.35",
@@ -30,6 +28,8 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/rimraf": "^3",
+    "esbuild": "^0.17.12",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^8.30.0",
     "fetch-vcr": "^3.2.0",
     "jest": "^29.3.1",
