--- a/packages/medplum/package.json
+++ b/packages/medplum/package.json
@@ -20,10 +20,10 @@
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.1-alpha.0",
     "@medplum/core": "^2.0.3",
-    "@swc/core": "^1.3.24",
-    "@swc/jest": "^0.2.24",
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
+    "esbuild": "^0.17.12",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^8.30.0",
     "fetch-vcr": "^3.2.0",
     "jest": "^29.3.1",
