--- a/packages/subscriptions/package.json
+++ b/packages/subscriptions/package.json
@@ -11,8 +11,7 @@
     "clean": "rimraf dist/",
     "format": "prettier --loglevel warn --write ./**/*.ts && eslint --fix ./**/*.ts",
     "package:create": "yarn build && node package.js pack",
-    "package:publish": "yarn build && node package.js publish",
-    "test": "jest"
+    "package:publish": "yarn build && node package.js publish"
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
@@ -20,9 +19,6 @@
     "@bonfhir/eslint-config": "^1.1.0-alpha.0",
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.1-alpha.0",
-    "@swc/cli": "^0.1.59",
-    "@swc/core": "^1.3.24",
-    "@swc/jest": "^0.2.24",
     "@types/fhir": "^0.0.35",
     "@types/node": "^18.11.18",
     "@types/rimraf": "^3",
