--- a/samples/ehr-sample-app/package.json
+++ b/samples/ehr-sample-app/package.json
@@ -11,8 +11,7 @@
     "build": "parcel build",
     "check": "prettier --check ./**/*.tsx && eslint ./**/*.tsx && tsc --noEmit",
     "clean": "rimraf dist/",
-    "format": "prettier --loglevel warn --write ./**/*.tsx && eslint --fix ./**/*.tsx",
-    "test": "jest"
+    "format": "prettier --loglevel warn --write ./**/*.tsx && eslint --fix ./**/*.tsx"
   },
   "source": "src/index.html",
   "targets": {
@@ -25,8 +24,6 @@
     "@bonfhir/eslint-config": "^1.1.0-alpha.0",
     "@bonfhir/prettier-config": "^1.0.0",
     "@bonfhir/typescript-config": "^1.0.1-alpha.0",
-    "@swc/core": "^1.3.24",
-    "@swc/jest": "^0.2.24",
     "@testing-library/react": "^13.4.0",
     "@types/fhir": "^0.0.35",
     "@types/node": "^18.11.18",
