--- a/packages/cmsdotgov/package.json
+++ b/packages/cmsdotgov/package.json
@@ -22,7 +22,6 @@
     "@bonfhir/typescript-config": "^1.0.1-alpha.0",
     "@medplum/core": "^2.0.7",
     "@types/fhir": "^0.0.35",
-    "@types/lodash": "^4.14.191",
     "@types/node": "^18.15.3",
     "esbuild": "^0.17.12",
     "esbuild-jest": "^0.5.0",
@@ -37,8 +36,7 @@
   "dependencies": {
     "@bonfhir/core": "^1.0.0-alpha.12",
     "@bonfhir/terminology": "^1.0.0-alpha.4",
-    "csv-parse": "^5.3.6",
-    "lodash": "^4.17.21"
+    "csv-parse": "^5.3.6"
   },
   "prettier": "@bonfhir/prettier-config"
 }
