--- a/packages/fhir-query/package.json
+++ b/packages/fhir-query/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/fhir-query",
   "description": "React Query FHIR package for Bonfhir.",
-  "version": "0.1.0-alpha.6",
+  "version": "0.1.0-alpha.7",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
@@ -16,10 +16,10 @@
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
-    "@bonfhir/eslint-config": "^1.1.0-alpha.0",
-    "@bonfhir/medplum": "^1.0.0-alpha.14",
-    "@bonfhir/prettier-config": "^1.0.0",
-    "@bonfhir/typescript-config": "^1.0.1-alpha.0",
+    "@bonfhir/eslint-config": "^1.1.0-alpha.1",
+    "@bonfhir/medplum": "^1.0.0-alpha.15",
+    "@bonfhir/prettier-config": "^1.0.1-alpha.0",
+    "@bonfhir/typescript-config": "^1.0.1-alpha.1",
     "@medplum/core": "^2.0.7",
     "@tanstack/react-query": "^4.24.4",
     "@testing-library/react": "^13.4.0",
@@ -42,7 +42,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@bonfhir/core": "^1.0.0-alpha.12"
+    "@bonfhir/core": "^1.0.0-alpha.13"
   },
   "prettier": "@bonfhir/prettier-config",
   "peerDependencies": {
