--- a/packages/cmsdotgov/package.json
+++ b/packages/cmsdotgov/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/cmsdotgov",
   "description": "CMS.gov integration package for Bonfhir.",
-  "version": "1.0.0-alpha.17",
+  "version": "1.0.0-alpha.18",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
@@ -16,10 +16,10 @@
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
-    "@bonfhir/eslint-config": "^1.1.0-alpha.0",
-    "@bonfhir/medplum": "^1.0.0-alpha.14",
-    "@bonfhir/prettier-config": "^1.0.0",
-    "@bonfhir/typescript-config": "^1.0.1-alpha.0",
+    "@bonfhir/eslint-config": "^1.1.0-alpha.1",
+    "@bonfhir/medplum": "^1.0.0-alpha.15",
+    "@bonfhir/prettier-config": "^1.0.1-alpha.0",
+    "@bonfhir/typescript-config": "^1.0.1-alpha.1",
     "@medplum/core": "^2.0.7",
     "@types/fhir": "^0.0.35",
     "@types/node": "^18.15.3",
@@ -34,8 +34,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@bonfhir/core": "^1.0.0-alpha.12",
-    "@bonfhir/terminology": "^1.0.0-alpha.4",
+    "@bonfhir/core": "^1.0.0-alpha.13",
+    "@bonfhir/terminology": "^1.0.0-alpha.5",
     "csv-parse": "^5.3.6"
   },
   "prettier": "@bonfhir/prettier-config"
