--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/codegen",
   "description": "Code generator based on FHIR definitions",
-  "version": "1.0.0-alpha.3",
+  "version": "1.0.0-alpha.4",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
@@ -20,9 +20,9 @@
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
-    "@bonfhir/eslint-config": "^1.1.0-alpha.0",
-    "@bonfhir/prettier-config": "^1.0.0",
-    "@bonfhir/typescript-config": "^1.0.1-alpha.0",
+    "@bonfhir/eslint-config": "^1.1.0-alpha.1",
+    "@bonfhir/prettier-config": "^1.0.1-alpha.0",
+    "@bonfhir/typescript-config": "^1.0.1-alpha.1",
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.41",
     "@types/fhir": "^0.0.35",
