--- a/packages/medplum/package.json
+++ b/packages/medplum/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/medplum",
   "description": "Medplum integration package for Bonfhir.",
-  "version": "1.0.0-alpha.14",
+  "version": "1.0.0-alpha.15",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
@@ -16,9 +16,9 @@
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
-    "@bonfhir/eslint-config": "^1.1.0-alpha.0",
-    "@bonfhir/prettier-config": "^1.0.0",
-    "@bonfhir/typescript-config": "^1.0.1-alpha.0",
+    "@bonfhir/eslint-config": "^1.1.0-alpha.1",
+    "@bonfhir/prettier-config": "^1.0.1-alpha.0",
+    "@bonfhir/typescript-config": "^1.0.1-alpha.1",
     "@medplum/core": "^2.0.7",
     "@types/node": "^18.15.3",
     "esbuild": "^0.17.12",
@@ -32,7 +32,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@bonfhir/core": "^1.0.0-alpha.12"
+    "@bonfhir/core": "^1.0.0-alpha.13"
   },
   "peerDependencies": {
     "@medplum/core": "^2.0.0"
