--- a/packages/terminology/package.json
+++ b/packages/terminology/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/terminology",
   "description": "Terminology package for Bonfhir.",
-  "version": "1.0.0-alpha.4",
+  "version": "1.0.0-alpha.5",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
@@ -16,10 +16,10 @@
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
-    "@bonfhir/codegen": "^1.0.0-alpha.3",
-    "@bonfhir/eslint-config": "^1.1.0-alpha.0",
-    "@bonfhir/prettier-config": "^1.0.0",
-    "@bonfhir/typescript-config": "^1.0.1-alpha.0",
+    "@bonfhir/codegen": "^1.0.0-alpha.4",
+    "@bonfhir/eslint-config": "^1.1.0-alpha.1",
+    "@bonfhir/prettier-config": "^1.0.1-alpha.0",
+    "@bonfhir/typescript-config": "^1.0.1-alpha.1",
     "@types/fhir": "^0.0.35",
     "@types/node": "^18.15.3",
     "eslint": "^8.36.0",
