--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bonfhir/ui-components",
   "description": "UI Components package for Bonfhir.",
-  "version": "0.1.0-alpha.6",
+  "version": "0.1.0-alpha.7",
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
   "type": "module",
@@ -17,10 +17,10 @@
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
-    "@bonfhir/eslint-config": "^1.1.0-alpha.0",
-    "@bonfhir/medplum": "^1.0.0-alpha.14",
-    "@bonfhir/prettier-config": "^1.0.0",
-    "@bonfhir/typescript-config": "^1.0.1-alpha.0",
+    "@bonfhir/eslint-config": "^1.1.0-alpha.1",
+    "@bonfhir/medplum": "^1.0.0-alpha.15",
+    "@bonfhir/prettier-config": "^1.0.1-alpha.0",
+    "@bonfhir/typescript-config": "^1.0.1-alpha.1",
     "@ladle/react": "^2.10.1",
     "@medplum/core": "^2.0.7",
     "@swc/core": "^1.3.41",
@@ -44,8 +44,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@bonfhir/core": "^1.0.0-alpha.12",
-    "@bonfhir/fhir-query": "^0.1.0-alpha.6"
+    "@bonfhir/core": "^1.0.0-alpha.13",
+    "@bonfhir/fhir-query": "^0.1.0-alpha.7"
   },
   "prettier": "@bonfhir/prettier-config",
   "peerDependencies": {
