--- a/samples/sample-api-lambda/serverless.yml
+++ b/samples/sample-api-lambda/serverless.yml
@@ -1,7 +1,28 @@
 plugins:
   - serverless-offline
-	
-service: LambdaService
+  - serverless-plugin-typescript
+  	
+service: lambdaService
+
 	
 provider:
   name: aws
+  runtime: nodejs18.x
+  runtimeManagement: auto # optional, set how Lambda controls all functions runtime. AWS default is auto; this can either be 'auto' or 'onFunctionUpdate'. For 'manual', see example in hello function below (syntax for both is identical)
+  memorySize: 512 # optional, in MB, default is 1024
+  timeout: 10 # optional, in seconds, default is 6
+  versionFunctions: false # optional, default is true
+  tracing:
+    lambda: true
+
+custom:
+  serverless-offline:
+    noPrependStageInUrl: true
+
+functions:
+  fhir:
+    handler: src/index.main # required, handler set in AWS Lambda
+    events:
+      - http:
+          method: post
+          path: /cb
