--- a/samples/sample-api-lambda/package.json
+++ b/samples/sample-api-lambda/package.json
@@ -21,11 +21,16 @@
     "@swc/jest": "^0.2.24",
     "@types/fhir": "^0.0.35",
     "@types/node": "^18.15.3",
+    "@types/serverless": "^3",
+    "esbuild": "^0.17.19",
     "eslint": "^8.36.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
     "rimraf": "^4.4.0",
+    "serverless": "^3.31.0",
+    "serverless-offline": "^12.0.4",
+    "serverless-plugin-typescript": "^2.1.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
   },
