--- a/samples/sample-api-lambda/tsconfig.json
+++ b/samples/sample-api-lambda/tsconfig.json
@@ -3,6 +3,6 @@
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["**/dist"],
   "compilerOptions": {
-    "rootDir": "."
+    "rootDir": "./"
   }
 }
