--- a/samples/sample-api-lambda/package.json
+++ b/samples/sample-api-lambda/package.json
@@ -5,12 +5,15 @@
   "private": true,
   "repository": "https://github.com/bonfhir/bonfhir.git",
   "license": "APACHE-2.0",
-  "type": "module",
+  "main": "handler.js",
   "scripts": {
     "dev": "nodemon --watch src -e ts --exec ts-node --esm --swc --transpileOnly --experimental-specifier-resolution=node src/index.ts",
     "check": "prettier --check ./**/*.ts && eslint ./**/*.ts && tsc --noEmit",
     "clean": "rimraf dist/",
-    "format": "prettier --loglevel warn --write ./**/*.ts && eslint --fix ./**/*.ts"
+    "format": "prettier --loglevel warn --write ./**/*.ts && eslint --fix ./**/*.ts",
+    "test": "serverless-bundle test",
+    "offline": "node --inspect /workspace/node_modules/serverless/bin/serverless.js offline",
+    "invoke": "node --inspect /workspace/node_modules/serverless/bin/serverless.js invoke local -f fhir"
   },
   "packageManager": "yarn@3.3.1",
   "devDependencies": {
@@ -20,25 +23,26 @@
     "@swc/core": "^1.3.41",
     "@swc/jest": "^0.2.24",
     "@types/fhir": "^0.0.35",
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.15.3",
     "@types/serverless": "^3",
     "esbuild": "^0.17.19",
     "eslint": "^8.36.0",
-    "jest": "^29.5.0",
+    "jest": "29.1.0",
     "nodemon": "^2.0.21",
     "prettier": "^2.8.4",
     "rimraf": "^4.4.0",
     "serverless": "^3.31.0",
+    "serverless-bundle": "^6.0.0",
     "serverless-offline": "^12.0.4",
-    "serverless-plugin-typescript": "^2.1.4",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "ts-jest": "29.1.0",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "@bonfhir/core": "^1.0.0-alpha.8",
     "@bonfhir/medplum": "^1.0.0-alpha.9",
     "@bonfhir/subscriptions": "^0.1.0-alpha.2",
-    "@bonfhir/subscriptions-lambda": "^0.1.0-alpha.1",
+    "@bonfhir/subscriptions-lambda": "^0.1.0-alpha.2",
     "@medplum/core": "2.0.14"
   },
   "prettier": "@bonfhir/prettier-config"
